--- a/CSS/style.css
+++ b/CSS/style.css
@@ -103,16 +103,17 @@ a{
 }
 
 .button-inicio{
-  
+  display: inline-block;
   background-color: #3882f6;
-  border-radius: 20px;
+  border-radius: 8px;
   color: #fff;
-  padding: 0.2rem 0.5rem;
-
+  padding: 0.5rem 1.8rem;
+  margin-top: .5rem;
+  font-weight: 600;
 }
 
 .img-inicio{
-  background-color: #e5e7ebd8;
+  background-color: #ffffff69;
   flex-grow: 1;
   width: 50%;
 
@@ -122,7 +123,7 @@ a{
 }
 
 .text-img{
-  color: #1f2937b2;
+  color: #ffffff;
 }
 
 
